css/styles.css
#nav-list {
  margin: 0;
}

.container {
  width: 100%;
}

#header-nav, #chicken-block {
  background-color: coral;
}

#header-nav .container {
  min-height: 62px;
}
.navbar-brand h1 {
  margin-top: 0px;
  color: black;
}

#collapsable-nav {
  padding: 0;
  border: 0px;
}

.navbar-default .navbar-nav > li > a {
  color: black;
  font-weight: bold;
}

#collapsable-nav li:hover {
  background-color: white;
}

.navbar-header button.navbar-toggle {
  clear: both;
  margin-top: -36px;
  background-color: white;
  border-color: #888;
}

#main-content h1:first-child {
  margin-top: 0;
  margin-bottom: 30px;
}

h1 {
  font-size: 30px;
  font-weight: bold;
}

h2 {
  font-size: 20px;
  font-weight: bold;
}

#chicken-block {
  margin: 10px ;
}

/********** Desktop view only (md+lg) **********/
@media (min-width: 992px) {

}

/********** Tablet view only (sm) **********/
@media (min-width: 768px) and (max-width: 991px) {

}

/********** Mobile view only (xs) **********/
@media (max-width: 767px) {

  #chicken-block {
    margin-left: 30px ;
    margin-right: 30px ;
  }
}

